--- a/EventosKotlin/app/src/main/res/layout/activity_main.xml
+++ b/EventosKotlin/app/src/main/res/layout/activity_main.xml
@@ -34,4 +34,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button02" />
 
+
+    <Button
+        android:id="@+id/button04"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ej04: Contador complejo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button03" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
