--- a/EventosKotlin/app/src/main/res/layout/activity_ej01_variantes_callback.xml
+++ b/EventosKotlin/app/src/main/res/layout/activity_ej01_variantes_callback.xml
@@ -8,13 +8,22 @@
     tools:context=".Ej01VariantesCallbackActivity">
 
     <Button
+        android:id="@+id/button10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
         android:id="@+id/button11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/button10" />
 
     <Button
         android:id="@+id/button12"
