--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,12 @@
             android:text="Ej04: Contador complejo" />
 
         <Button
+            android:id="@+id/button04pffp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ej04: Contador complejo (versión PFFP)" />
+
+        <Button
             android:id="@+id/button05"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
